# NIFDiff

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  GenerateVS2026.bat  GenerateVS2026.ps1  LICENSE  NexusMods_Mod_Description.bbcode  README.md  RELEASING.md  Release.ps1  THIRD_PARTY_NOTICES.md
app/: AppIpc.cpp  AppIpc.h  AppSettings.h  AppSetup.cpp  AppSetup.h  CollisionMetadataTest.cpp  FileDialog.cpp  FileDialog.h  FloarPathByteSource.cpp  FloarPathByteSource.h  ImageMipDecodeTest.cpp  ImageViewTest.cpp  IniStore.h  NIFDiffApp.cpp  NIFDiffApp.h  NodeTransformDiffTest.cpp  NodeTransformExportTest.cpp  RenderSurfaceCaptureTest.cpp  ResourceResolveTest.cpp  ScreenshotUtil.cpp  ScreenshotUtil.h  ShaderIncludeResolverTest.cpp  TexturePipelineTest.cpp  ValidateNif.cpp  VirtualFileSystemTest.cpp  main.cpp
app/res/: NIFDiff.rc  resource.h  version.h.in
cmake/: GenerateVersion.cmake  GenerateVersion.h.in  Version.cmake
core/: AnimController.cpp  AnimController.h  Camera.h  CollisionMetadata.h  NOTES.md  NifDocument.cpp  NifDocument.h  NifItem.h  NifLog.h  NifStream.h  NifTypes.h  NifValue.h  NodeTransformDiff.cpp  NodeTransformDiff.h  NodeTransformExport.cpp  NodeTransformExport.h  ResourceManager.cpp  ResourceManager.h  ResourceResolver.cpp  ResourceResolver.h  SceneBuilder.cpp  SceneBuilder.h  StartupTrace.h
docs/: multi-game-data-roots-diagnosis.md  resource-manager-design.md  texture-view-port-audit.md
render/: D3D11Renderer.cpp  D3D11Renderer.h  NOTES.md  RenderDevice.cpp  RenderDevice.h  RenderMeshCache.h  RenderTarget.cpp  RenderTarget.h  ShaderIncludeResolver.cpp  ShaderIncludeResolver.h  Shaders.h  TextureCache.cpp  TextureCache.h  TexturePipelineState.cpp  TexturePipelineState.h  TextureRepository.cpp  TextureRepository.h
render/shaders/: Common.hlsli  Highlight.hlsl  Lit.hlsl  Unlit.hlsl  shaders.ini
schema_reference/: NOTES.md
ui/: ComparePane.cpp  ComparePane.h  ImageAlphaPresentation.cpp  ImageAlphaPresentation.h  ImageGpuResourceCache.cpp  ImageGpuResourceCache.h  ImagePane.cpp  ImagePane.h  ImagePresentation.cpp  ImagePresentation.h  IpcOpenRequest.h  NOTES.md  NifCompareControlPanel.cpp  NifCompareControlPanel.h  NifComparePane.cpp  NifComparePane.h  NifCompareSplitCoordinator.cpp  NifCompareSplitCoordinator.h  NifCompareView.cpp  NifCompareView.h  NifViewport.cpp  NifViewport.h  PaneContent.h  ThumbnailStrip.cpp  ThumbnailStrip.h
